<resources>
    <string name="app_name">myEHR</string>
    <string name="app_des">A platform for patient and doctor</string>
    <string name="title_activity_reg__log_in_">Reg_LogIn_Activity</string>
    <string name="title_activity_reg_log_in_">Reg_log_in_Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">EHR</string>
    <string name="nav_header_subtitle">Your Personal Health Assistant</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_reg">Register</string>
    <string name="menu_login">Log In</string>
    <string name="menu_forgotPass">Forgot Password?</string>
    <string name="menu_help">Help</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_rate">Rate Us</string>

    <string name="login"><u>I already have an account , login</u></string>
    <string name="register_text"><u>Register</u></string>
    <string name="login_text"><u>Login</u></string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="next">Next</string>
    <string name="register_as_patient">Register as Patient</string>
    <string name="register_as_doctor">Register as Doctor</string>

    <string name="todo">TODO</string>
    <string name="fullname">Full Name</string>
    <string name="email">Email</string>
    <string name="reg_No">Registration Number</string>

    <string name="phoeNo">Phone Number</string>
    <string name="birthdate">Date of Birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="bg">Blood Group</string>
    <string name="pass">Password</string>
    <string name="cpass">Confirm Password</string>
    <string name="registerAs">Register as...</string>
    <string name="patient">Patient</string>
    <string name="doctor">Doctor</string>
    <string name="nurse">Nurse</string>


    <string-array name="gender">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>


    <string-array name="bloodGroup">
        <item>Blood Group</item>
        <item>O+</item>
        <item>O-</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
    <string name="title_activity_home">HomeActivity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>


    <!--navigation drawer-->

    <string name="open">open</string>
    <string name="close">close</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
