<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Patient.RegisterAsPatientActivity">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo"

            android:scaleType="centerCrop" />

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowColor="#57000000"
                android:text="@string/register_as_patient"
                android:background="@drawable/buttonshape2"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="#ffffff"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"/>



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="#000000">

                <EditText
                    android:id="@+id/fullNamePatient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/fullname"
                    android:inputType="text"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:importantForAutofill="no" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="#000000">

                <EditText
                    android:id="@+id/emailP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:importantForAutofill="no"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="#000000">

                <EditText
                    android:id="@+id/phoneNoP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/phoeNo"
                    android:inputType="phone"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:importantForAutofill="no" />

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="#000000">

                    <EditText
                        android:id="@+id/dateofBirthP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/birthdate"
                        android:inputType="date"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:importantForAutofill="no" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="#000000">

                    <Spinner
                        android:id="@+id/GenderSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:hint="@string/bg"
                        android:inputType="text"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColorHint="#000000">

                    <Spinner
                        android:id="@+id/bloodGroupPSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:hint="@string/bg"
                        android:inputType="text"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        />

                </com.google.android.material.textfield.TextInputLayout>





            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="#000000">

                <EditText
                    android:id="@+id/passwordP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/pass"
                    android:inputType="textPassword"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:autofillHints="" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="#000000">

                <EditText
                    android:id="@+id/confirmPasswordP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/cpass"
                    android:inputType="textPassword"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:importantForAutofill="no" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/registerPNext"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:text="@string/register_text"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:background="@drawable/buttonshape2"
                android:textColor="@color/colorPurple"
                android:textSize="18sp"
                android:layout_marginTop="44dp"
                android:layout_marginBottom="16dp"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>



</RelativeLayout>