<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpeningActivity"
    android:background="@drawable/background">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_above="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:drawablePadding="10dp"
        android:background="@color/colorSkyblue"
        android:fontFamily="@font/gotham"
        android:shadowColor="#009688"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="5"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="70sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="50dp"
        android:layout_marginBottom="210dp"
        android:textAlignment="center"
        android:text="@string/app_des"
        android:textColor="@color/colorPurple"
        android:textSize="30sp"
        android:textStyle="bold"
        />


    <Button
        android:id="@+id/join_us"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login1"
        android:layout_marginBottom="17dp"
        android:background="@drawable/buttonshape"
        android:fontFamily="@font/gotham"
        android:text="@string/register_text"
        android:textAllCaps="false"
        android:textColor="@color/colorGreen"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/login1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/gotham"
        android:paddingBottom="8dp"
        android:paddingTop="4dp"
        android:shadowColor="#57000000"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="2"
        android:background="@drawable/buttonshape"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/colorPurple"
        android:textSize="16sp"
        android:textStyle="normal"/>





</RelativeLayout>