<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gotham"
            android:shadowColor="#57000000"
            android:text="@string/login_text"
            android:textAlignment="center"
            android:gravity="center"
            android:background="@color/colorSkyblue"
            android:textColor="#FFFFFF"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColorHint="#000000">

            <EditText
                android:id="@+id/phoneNoLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/calibri"
                android:hint="@string/phoeNo"
                android:inputType="phone"
                android:textColor="#000000"
                android:textSize="18sp"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColorHint="#000000">

            <EditText
                android:id="@+id/passwordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/calibri"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:textColor="#000000"
                android:textSize="18sp"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>


        <CheckBox
            android:id="@+id/remember_me_chkb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Remember Me"
            android:gravity="center_vertical"
            android:textColor="@color/colorPurple"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"/>

        <Button
            android:id="@+id/login3"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape2"
            android:outlineSpotShadowColor="@color/colorAccent"
            android:outlineAmbientShadowColor="@color/colorGreen"
            android:fontFamily="@font/gotham"
            android:text="@string/login_text"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:textColor="@color/colorPurple"
            android:textSize="18sp"
            android:layout_marginTop="44dp"
            android:layout_marginBottom="16dp"
            android:textStyle="bold" />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />



</RelativeLayout>

